# design-patterns-notes

./: .gitignore  index.md  uml.md
behavoir/: index.md
behavoir/chain_of_responsibility/: chain_of_responsibility.vpp
behavoir/command/: command.md
behavoir/observer/: observer.md  uml.dia
behavoir/observer/01/: CMakeLists.txt  ConcreteObserver.cpp  ConcreteObserver.h  ConcreteSubject.cpp  ConcreteSubject.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main.cpp
behavoir/strategy/: duck-example.md  index.md  strategy.md  strategy_summary.md  theory.md
behavoir/strategy/01/: readme.md
books/head_first_design_patterns_2nd/ch2_observer/: before.drawio  observer.drawio
creational/: abstract-factory.md  review.md
creational/abstract-factory/: 01_understanding.md
creational/abstract-factory/samples/case01/: CMakeLists.txt  main.cpp
creational/abstract-factory/samples/case01/Factory/: MotifWidgetFactory.h  PMWidgetFactory.h
creational/abstract-factory/samples/case01/Window/: PMWindow.h  Window.h
creational/builder/: 01_unserstanding.md
creational/builder/samples/case01/: CMakeLists.txt  Document.h  GSK.puml  Helper.h  RTFReader.h  main.cpp
creational/builder/samples/case01/builder/: ASCIIText.h  TeXText.h  TextWidget.h
creational/builder/samples/case01/builder/Converter/: ASCIIConverter.h  TeXConverter.h  TextConverter.h
creational/singleton/: singleton.xmind
strategy/: index.md  strategy.md
structural/: index.md
structural/composite/: class-diagram.drawio
structural/decorator/: decorator.md  mock-testing.md  startbuzz.md
(+76 files in other folders)
